[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crisisops-env"
version = "2.0"
description = "Multi-agent cybersecurity simulation with resource trade-offs and deception memory."
dependencies = [
    "pydantic",
    "openai",
    "openenv-core",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"
